fix: update test mocks to match tenant-scoped repository signatures